--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,11 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.3.2",
+    "cores": "^0.8.5",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "zod": "^3.20.2"
   }
