--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "cores": "^0.8.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "react": "^17.0.2",
+    "react2": "^15.3.1",
     "zod": "^3.20.2"
   }
 }
