--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.3.2",
     "cores": "^0.8.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "react": "^17.0.2",
     "react2": "^15.3.1",
