--- a/api/package.json
+++ b/api/package.json
@@ -9,12 +9,13 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "zod": "^3.20.2"
+  },
   "devDependencies": {
     "@azure/functions": "^3.0.0",
     "@types/node": "^16.x",
-    "typescript": "^4.0.0",
-    "dotenv": "^16.0.3",
-    "zod": "^3.20.2"
+    "typescript": "^4.0.0"
   }
 }
